adds more slides

--- a/index.html
+++ b/index.html
@@ -189,6 +189,13 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
        <img src="/img/mona_lisa.jpg" />
      </section>
 
+     <section>
+       <h2>Worldpackers</h2>
+       <img src="/img/galera.jpg" />
+     </section>
+
+
+
 
 
 
