--- a/index.html
+++ b/index.html
@@ -203,15 +203,17 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
          <li>18 pessoas</li>
          <li>Equipe tecnologia: 6 pessoas</li>
          <li>Muitos deploys por dia!</li>
+         <li>Platforma web e app Android</li>
        </ul>
      </section>
 
      <section data-background="#1F77B4">
        <h2>Nossa metodologia ágil</h2>
        <ul>
-         <li>Baseada no Scrum e Kanban (apenas baseada)</li>
+         <li>Scrum e Kanban (apenas baseada!)</li>
          <li>Sprint 1 semana, daily, reviews</li>
          <li>Não temos um PO (Product Owner) e Scrum Master</li>
+         <li>Nós inspiramos muito na cultura do Spotify</li>
        </ul>
      </section>
 
@@ -234,20 +236,31 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
      <section data-background="#1F77B4">
         <h2>Nossa cultura ágil</h2>
         <ul>
-          <li>Nós inspiramos muito na cultura do Spotify</li>
+          <li>Nós somos a cultura!</li>
           <li>Times (squads) multi-diciplinares</li>
+          <ul><li>Conteúdo + UX + devs juntos S2</li></ul>
           <li>OKR (Objectives and Key Results) norteam todos</li>
           <li>Lean Workflow</li>
         </ul>
         <img src="/img/lean.png" />
-     </section>
+      </section>
 
+      <section data-background="#1F77B4">
+        <h2>Agilidade técnica</h2>
+        <h3>Objetivo: Entregar valor rápido!</h3>
+        <img width="100%" height="100%" src="/img/adventure.gif">
+      </section>
 
-
-
-
-
-
+      <section data-background="#1F77B4">
+        <h2>Infraestrutura</h2>
+        <ul>
+          <li>PaaS e SaaS são nossos melhores amigos!</li>
+            <ul>Busca, envio de emails, cache, banco de dados, ...</ul>
+          <li>Monitoramento e reação rápida são essenciais </li>
+          <li>Agilidade em fazer deploys</li>
+          <li>Todos somos devOps</li>
+        </ul>
+      </section>
 
               </div>
 
