finishes first version

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
       <ul>
         <li>Estágio QA / dev Jr na Ingenico (2007-2009)</li>
         <li>Terminei o curso de <strong>SI</strong> em 2009</li>
-        <li>Trabalhei com o Chaim no <strong>TCC, SAEG e no Qualipso</strong></li>
+        <li>Trabalhei no SAEG e no projeto Qualipso</strong></li>
         <li>Mestrado no <strong>IME-USP</strong> (2010 - 2012)</li>
         <li>Trabalhei na <strong>Elo7 e Walmart.com</strong></li>
         <br>
@@ -198,12 +198,12 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
      <section data-background="#1F77B4">
        <h2>Worldpackers em números</h2>
        <ul>
-         <li>+90.000 usuários</li>
-         <li>Hosts em 109 países</li>
-         <li>18 pessoas</li>
-         <li>Equipe tecnologia: 6 pessoas</li>
-         <li>Muitos deploys por dia!</li>
          <li>Platforma web e app Android</li>
+         <li>+ 90.000 usuários</li>
+         <li>Hosts em 109 países</li>
+         <li>18 pessoas no total</li>
+         <li>Equipe tecnologia: 1 designer e 5 devs</li>
+         <li>Muitos deploys por dia!</li>
        </ul>
      </section>
 
@@ -220,11 +220,11 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
      <section data-background="#458B00">
        <h2>Spotify</h2>
        <ul>
-         <li>Ser Ágil > Scrum</li>
-         <li>Príncipios e práticas > Cerimônias</li>
-         <li>Reagir a falhas > Evitar falhas</li>
-         <li>Caos > Burocracia</li>
-          <li>People > *</li>
+         <li>ser ágil &gt; scrum</li>
+         <li>príncipios e práticas &gt; cerimônias</li>
+         <li>reagir a falhas &gt; evitar falhas</li>
+         <li>caos &gt; burocracia</li>
+          <li>people &gt; *</li>
         </ul>
         <small>Retirado de https://labs.spotify.com/2014/03/27/spotify-engineering-culture-part-1/</small>
       </section>
@@ -260,6 +260,37 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
           <li>Agilidade em fazer deploys</li>
           <li>Todos somos devOps</li>
         </ul>
+      </section>
+
+      <section data-background="#1F77B4">
+        <h2>Desenvolvimento</h2>
+        <ul>
+          <li>Git flow</li>
+          <li>Code review</li>
+          <li>Teste automatizados</li>
+          <ul><li>Todos somos QA's</li></ul>
+          <li>Integração contínua (também é um PaaS)</li>
+          <li>Devs com especialidades mas fazendo de tudo</li>
+        </ul>
+      </section>
+
+      <section data-background="#1F77B4">
+        <h2>Seja ágil a sua maneira</h2>
+        <ul>
+          <li>Disciplina: metodologias ágeis são importantes</li>
+          <ul><li>príncipios &gt; metodologias ágeis</li></ul>
+          <li>pessoas &gt; tudo
+          <ul><li>respeito, confiança e comunicação</li></ul>
+          <li>Responsabilidade: entregar valor sempre!</li>
+          <li>Startup: desafio e aprendizado infinitos =]</li>
+        </ul>
+      </section>
+
+      <section data-background="black">
+        <h2 class="thank_you">Obrigado !!!</h2>
+        <h4>@fmbesson</h4>
+        <h4>github.com/besson</h4>
+        <h4><a href="http://www.thecodeknight.com">thecodeknight.com</a></h4>
       </section>
 
               </div>
