adds more photos

--- a/index.html
+++ b/index.html
@@ -190,9 +190,18 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
        <img src="/img/mona_lisa.jpg" />
      </section>
 
-     <section>
-       <h2>Worldpackers</h2>
-       <img src="/img/galera.jpg" />
+     <section data-background="#1F77B4">
+      <img src="img/white_logo.png" />
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-6">
+            <img src="/img/galera.jpg" />
+          </div>
+          <div class="col-md-6">
+            <img src="/img/galera_1.jpg" />
+          </div>
+         </div>
+       </div>
      </section>
 
      <section data-background="#1F77B4">
