--- a/public/index.html
+++ b/public/index.html
@@ -302,7 +302,7 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
         <h2>Seja ágil a sua maneira</h2>
         <ul>
           <li>Disciplina: metodologias ágeis são importantes</li>
-          <ul><li>príncipios &gt; metodologias ágeis</li></ul>
+          <ul><li>príncipios e cultura &gt; metodologias </li></ul>
           <li>pessoas &gt; tudo
           <ul><li>respeito, confiança e comunicação</li></ul>
           <li>Responsabilidade: entregar valor sempre!</li>
