--- a/public/index.html
+++ b/public/index.html
@@ -190,18 +190,9 @@ document.getElementsByTagName( 'head' )[0].appendChild( link );
        <img src="/img/mona_lisa.jpg" />
      </section>
 
-     <section data-background="#1F77B4">
+     <section data-background="#007B94">
       <img src="img/white_logo.png" />
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-6">
-            <img src="/img/galera.jpg" />
-          </div>
-          <div class="col-md-6">
-            <img src="/img/galera_1.jpg" />
-          </div>
-         </div>
-       </div>
+      <img src="/img/galera.jpg" />
      </section>
 
      <section data-background="#1F77B4">
